fixed portfolio pages spacing

--- a/project-page-2.html
+++ b/project-page-2.html
@@ -116,7 +116,7 @@
         </div>
         <!--Work from original work page-->
         <section class="portfolio">
-          <ul class="grid">
+          <ul class="project-grid">
             <li class="project-page-grid-item">
               <figure>
                 <img src="assets/dial/error-hehe.jpg" alt="Dial is coming soon!" />
