changes project images and project order

--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -121,7 +121,6 @@
         <!--Work from original work page-->
         <section class="portfolio">
           <ul class="project-grid">
-
             <li class="project-page-grid-item">
               <figure>
                 <img
@@ -270,10 +269,10 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-3.html"> <p>↙ Field Fable</p> </a>
+              <a href="PP2-Dial.html"> <p> </p> </a>
             </li>
             <li class="next-button">
-              <a href="project-page-5.html"> <p>Stella ↘</p> </a>
+              <a href="PP2-Dial.html"> <p>Dial ↘</p> </a>
             </li>
           </ul>
         </section>
