--- a/PP5-Stella.html
+++ b/PP5-Stella.html
@@ -232,10 +232,10 @@
 
           <ul class="portfolio-navigation">
             <li class="previous-button">
-              <a href="project-page-4.html"> <p>↙ Thicket Co.</p> </a>
+              <a href="PP1-Wag&Wander.html"> <p>↙ Wag & Wander</p> </a>
             </li>
             <li class="next-button">
-              <a href="project-page-6.html"> <p>Sunbud ↘</p> </a>
+              <a href="PP6-Sunbud.html"> <p>Sunbud ↘</p> </a>
             </li>
           </ul>
         </section>
