--- a/index.html
+++ b/index.html
@@ -96,8 +96,72 @@
       <main class="work-wrapper">
         <section class="portfolio">
           <ul class="grid">
+              <li class="work-page-grid-item">
+              <a href="PP4-Thicket.html">
+                <figure>
+                  <img
+                    src="assets/project-covers/thicket-cover.jpg"
+                    alt="Branding, illustration and experiential design project for puppy playground, Wag & Wander"
+                  />
+                </figure>
+                <div class="overlay">
+                  <h1 class="overlay-title">Thicket Co.</h1>
+                  <h3 class="overlay-description">
+                    Low-Impact Camping Gear Company
+                  </h3>
+                  <p class="overlay-description">2024</p>
+                  <ul class="project-category-list">
+                    <li class="project-stella-category">Packaging</li>
+                    <li class="project-stella-category">Editorial</li>
+                    <li class="project-stella-category">Illustration</li>
+                  </ul>
+                </div>
+              </a>
+            </li>
             <li class="work-page-grid-item">
-              <a href="project-page-1.html">
+              <a href="PP2-Dial.html">
+                <figure>
+                  <img
+                    src="assets/project-covers/dial-cover.jpg"
+                    alt="Branding, album design and merchandise design for fictional artist, Stella."
+                  />
+                </figure>
+                <div class="overlay">
+                  <h1 class="overlay-title">DIAL</h1>
+                  <h3 class="overlay-description">
+                    Music Discovery Platform Amplifying Gender Equity
+                  </h3>
+                  <p class="overlay-description">2024</p>
+                  <ul class="project-category-list">
+                    <li class="project-stella-category">Branding</li>
+                    <li class="project-stella-category">Editorial</li>
+                    <li class="project-stella-category">Social Media</li>
+                  </ul>
+                </div>
+              </a>
+            </li>
+            <li class="work-page-grid-item">
+              <a href="PP3-FieldFable.html">
+                <figure>
+                  <img
+                    src="assets/project-covers/FF-cover.jpg"
+                    alt="Branding and editorial project aimed to improve gender equity in the music industry."
+                  />
+                </figure>
+                <div class="overlay">
+                  <h1 class="overlay-title">Field Fable</h1>
+                  <h3 class="overlay-description">Enchanting Craft Brewery</h3>
+                  <p class="overlay-description">2024</p>
+                  <ul class="project-category-list">
+                    <li class="project-stella-category">Branding</li>
+                    <li class="project-stella-category">Packaging</li>
+                    <li class="project-stella-category">Illustration</li>
+                  </ul>
+                </div>
+              </a>
+            </li>
+             <li class="work-page-grid-item">
+              <a href="PP1-Wag&Wander.html">
                 <figure>
                   <img
                     src="assets/project-covers/WW-cover.jpg"
@@ -120,72 +184,9 @@
                 </div>
               </a>
             </li>
+         
             <li class="work-page-grid-item">
-              <a href="project-page-2.html">
-                <figure>
-                  <img
-                    src="assets/project-covers/dial-cover.jpg"
-                    alt="Branding, album design and merchandise design for fictional artist, Stella."
-                  />
-                </figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">DIAL</h1>
-                  <h3 class="overlay-description">
-                    Music Discovery Platform Amplifying Gender Equity
-                  </h3>
-                  <p class="overlay-description">2024</p>
-                  <ul class="project-category-list">
-                    <li class="project-stella-category">Branding</li>
-                    <li class="project-stella-category">Editorial</li>
-                    <li class="project-stella-category">Social Media</li>
-                  </ul>
-                </div>
-              </a>
-            </li>
-            <li class="work-page-grid-item">
-              <a href="project-page-3.html">
-                <figure>
-                  <img
-                    src="assets/project-covers/FF-cover.jpg"
-                    alt="Branding and editorial project aimed to improve gender equity in the music industry."
-                  />
-                </figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Field Fable</h1>
-                  <h3 class="overlay-description">Enchanting Craft Brewery</h3>
-                  <p class="overlay-description">2024</p>
-                  <ul class="project-category-list">
-                    <li class="project-stella-category">Branding</li>
-                    <li class="project-stella-category">Packaging</li>
-                    <li class="project-stella-category">Illustration</li>
-                  </ul>
-                </div>
-              </a>
-            </li>
-            <li class="work-page-grid-item">
-              <a href="project-page-4.html">
-                <figure>
-                  <img
-                    src="assets/project-covers/thicket-cover.jpg"
-                    alt="Branding, illustration and experiential design project for puppy playground, Wag & Wander"
-                  />
-                </figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Thicket Co.</h1>
-                  <h3 class="overlay-description">
-                    Low-Impact Camping Gear Company
-                  </h3>
-                  <p class="overlay-description">2024</p>
-                  <ul class="project-category-list">
-                    <li class="project-stella-category">Packaging</li>
-                    <li class="project-stella-category">Editorial</li>
-                    <li class="project-stella-category">Illustration</li>
-                  </ul>
-                </div>
-              </a>
-            </li>
-            <li class="work-page-grid-item">
-              <a href="project-page-5.html">
+              <a href="PP5-Stella.html">
                 <figure>
                   <img
                     src="assets/project-covers/stella-cover.jpg"
@@ -207,7 +208,7 @@
               </a>
             </li>
             <li class="work-page-grid-item">
-              <a href="project-page-6.html">
+              <a href="PP6-Sunbud.html">
                 <figure>
                   <img
                     src="assets/project-covers/sunbud-cover.jpg"
