edited wag and wander

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <a href="PP1-Wag&Wander.html">
                 <figure>
                   <img
-                    src="assets/project-covers/WW-cover.jpg"
+                    src="assets/wag-and-wander/lauren-howard-design-wagandwander_equipment-signage.gif"
                     alt="Brand identity and packaging design for Field Fable craft ales."
                   />
                 </figure>
