added some thicket images and a vid

--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -122,6 +122,22 @@
         <section class="portfolio">
           <ul class="project-grid">
             <li class="project-page-grid-item">
+               <figure>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          class="your-video-class"
+        >
+          <source src="assets/thicket-intro.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <figcaption> </figcaption>
+      </figure>
+            </li>
+           
+            <li class="project-page-grid-item">
               <figure>
                 <img
                   src="assets/thicket/lauren-howard-design-thicket-logo-colour-type-brand-guide.jpg"
@@ -151,7 +167,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/thicket/lauren-howard-thicketco-packaging-survivalist-camping-kit.jpg"
+                  src="assets/kit-test.jpg"
                   alt="The Wilderness Essentials Kit packaging from Thicket Co."
                 />
               </figure>
