added dial title card and edited css

--- a/PP2-Dial.html
+++ b/PP2-Dial.html
@@ -118,9 +118,19 @@
         <section class="portfolio">
           <ul class="project-grid">
             <li class="project-page-grid-item">
-              <figure>
-                <img src="assets/dial/error-hehe.jpg" alt="Dial is coming soon!" />
-              </figure>
+                <figure>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          class="your-video-class"
+        >
+          <source src="assets/dial/dial-intro.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <figcaption> </figcaption>
+      </figure> 
             </li>
           </ul>
 
