--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -130,7 +130,7 @@
           playsinline
           class="your-video-class"
         >
-          <source src="assets/thicket-intro.mp4" type="video/mp4" />
+          <source src="assets/thicket/thicket-intro.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <figcaption> </figcaption>
