--- a/PP1-Wag&Wander.html
+++ b/PP1-Wag&Wander.html
@@ -174,8 +174,17 @@
                   alt="Tips and tricks for dog owners from Scout and Trek."
                 />
               </figure>
-
             </li>
+
+              <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/wag-and-wander/lauren-howard-design-wag-and-wander-tagline.jpg"
+                  alt="Wag and Wander tagline, happy tails, happy trails.
+                />
+              </figure>
+            </li>
+
           </ul>
 
           <ul class="portfolio-navigation">
