--- a/PP2-Dial.html
+++ b/PP2-Dial.html
@@ -132,6 +132,16 @@
         <figcaption> </figcaption>
       </figure> 
             </li>
+
+             <li class="project-page-grid-item-dial">
+              <figure>
+                <img
+                  src="assets/dial/lauren-howard-dial-brand-guide.jpg"
+                  alt="Tips and tricks for dog owners from Scout and Trek."
+                />
+              </figure>
+            </li>
+
           </ul>
 
           <ul class="portfolio-navigation">
