--- a/PP3-FieldFable.html
+++ b/PP3-FieldFable.html
@@ -140,6 +140,15 @@
                 />
               </figure>
             </li>
+
+             <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/field-fable/pale-ale-animation.gif"
+                  alt="Field Fable pale ale packaging label."
+                />
+              </figure>
+            </li>
       
             <li class="project-page-grid-item">
               <figure>
