--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -167,7 +167,7 @@
             <li class="project-page-grid-item">
               <figure>
                 <img
-                  src="assets/kit-test.jpg"
+                  src="assets/thicket/lauren-howard-design-thicket-kit-packaging.gif"
                   alt="The Wilderness Essentials Kit packaging from Thicket Co."
                 />
               </figure>
