--- a/PP6-Sunbud.html
+++ b/PP6-Sunbud.html
@@ -117,6 +117,24 @@
         <!--Work from original work page-->
         <section class="portfolio">
           <ul class="project-grid">
+                <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/sunbud/sunbud-title.jpg"
+                  alt="Sunbud logo!"
+                />
+              </figure>
+            </li>
+
+              <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/sunbud/lauren-howard-sunbud-colour-type.jpg"
+                  alt="Sunbud brand colours and type!"
+                />
+              </figure>
+            </li>
+
             <li class="project-page-grid-item">
               <figure>
                 <img
@@ -126,15 +144,6 @@
               </figure>
             </li>
      
-            <li class="project-page-grid-item">
-              <figure>
-                <img
-                  src="assets/sunbud/lauren-howard-sunbud-colour-type.jpg"
-                  alt="Sunbud brand colours and type!"
-                />
-              </figure>
-            </li>
-       
             <li class="project-page-grid-item">
               <figure>
                 <img
