--- a/about.html
+++ b/about.html
@@ -140,24 +140,25 @@
           <div class="about-content-list">
             <h3>Experience</h3>
             <ul>
-              <li>
+               <li>
                 <p>
-                  Illustration Contributor (On-call) | Capilano Courier<br />
-                  <h4>September 2021 - Present</h4>
+                  Practicum Designer | Thought Shop<br />
+                  <h4>Feburary 2025 - April 2025</h4>
                 </p>
               </li>
               <li>
                 <p>
-                  Digital Studio Clerk (On-call) | Burnaby Public Library<br />
+                  Illustration Contributor | Capilano Courier<br />
+                  <h4>September 2021 - April 2025</h4>
+                </p>
+              </li>
+              <li>
+                <p>
+                  Digital Studio Clerk | Burnaby Public Library<br />
                   <h4>March 2024 - Present</h4>
                 </p>
               </li>
-              <li>
-                <p>
-                  Practicum Designer | Thought Shop<br />
-                  <h4>Feburary 2025-March 2025</h4>
-                </p>
-              </li>
+             
             </ul>
           </div>
 
