fixed arrows, added description info, fixed captions

--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -96,13 +96,15 @@
         <div class="project">
           <div class="project-row">
             <div class="project-title">
-              <h1>Thicket Co.</h1>
-              <h2>Art Direction, Packaging, Illustration, Editorial</h2>
-              <h5>
-                A big thanks to Chris Rogers and Nathan Aguilar<br />
-                for their collaboration on this project!
-              </h5>
-            </div>
+               <h1>Thicket Co.</h1>
+  <h2>Art Direction, Packaging, Illustration, Editorial</h2>
+  <div class="collaborator-caption">
+    <p>
+      A big thanks to Chris Rogers and Nathan Aguilar<br />
+      for their collaboration on this project!
+    </p>
+  </div>
+</div>
             <div class="project-description">
               <p>
                 Thicket Co. is an approachable survivalist camping brand
@@ -136,6 +138,27 @@
         <figcaption> </figcaption>
       </figure>
             </li>
+
+                <li>
+        <div class="project-description-block">
+         <div class="project-description-content">
+           <div class="project-description-heading">
+  <h3>IN A NUTSHELL</h3>
+  </div>
+            <div class="project-description-body">
+              <p>
+                <strong>Audience:</strong> Environment and consumption-conscious urban professionals aged 20–40, seeking a low-stakes, low-impact way to deepen their connection with nature.
+              </p>
+              <p>
+                <strong>USP:</strong> Thicket Co. redefines survivalist camping as approachable, sustainable, and inclusive. In contrast to sleek, often elitist competitors, it offers a warm, community-driven alternative. Its gear is crafted from recycled food waste commonly discarded by its audience, reinforcing the brand’s “leave no trace” ethos. Like a thicket, it fosters an ecosystem of support, promoting knowledge-sharing and connection to nature. 
+              </p>
+              <p>
+                <strong>Deliverables and goals:</strong> Create a down-to-earth brand identity that feels nostalgic, accessible and grounded in sustainability. Each application should sparks curiosity and builds trust, helping even first-time campers feel capable and at home in the wild. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </li>
            
             <li class="project-page-grid-item">
               <figure>
@@ -144,8 +167,7 @@
                   alt="Starting a Fire spread of the Thicket Co. field guide."
                 />
               </figure>
-            </li>
-            
+            </li>            
 
             <li class="project-page-grid-item">
               <figure>
@@ -209,26 +231,51 @@
             </li>
           </ul>
 
-          <ul class="portfolio-navigation">
-            <li class="previous-button">
-              <a href="PP2-Dial.html"> <p> </p> </a>
-            </li>
-            <li class="next-button">
-              <a href="PP2-Dial.html"> <p>Dial ↘</p> </a>
-            </li>
-          </ul>
+     <div class="project-nav">
+ <a href="PP3-FieldFable.html" class="previous-button">
+</a>
+
+  <a href="PP2-Dial.html" class="next-button">
+  <h3>
+Dial
+    <svg
+      id="Layer_1"
+      data-name="Layer 1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 95.27 95.27"
+      class="arrow-icon"
+      aria-hidden="true"
+      focusable="false"
+      role="img"
+    >
+      <defs>
+        <style>
+          .cls-1 {
+            fill: none;
+            stroke: currentColor;
+            stroke-miterlimit: 10;
+            stroke-width: 6px;
+          }
+        </style>
+      </defs>
+      <line class="cls-1" x1="1.77" y1="1.77" x2="92.77" y2="92.77" />
+      <polyline class="cls-1" points="92.77 27.77 92.77 92.77 27.77 92.77" />
+    </svg>
+  </h3>
+</a>
+</div>
         </section>
       </main>
     </div>
     <!--footer-->
-    <footer class="global-footer">
-      <h5 class="copyright">
+   <footer class="global-footer">
+      <h3 class="copyright">
         <a href="mailto:hello@laurenhoward.ca">
           Let's Connect! hello@laurenhoward.ca
         </a>
-      </h5>
+      </h3>
 
-      <h5>&copy;2024-2025 Lauren Howard. All Rights Reserved.</h5>
+      <h5>&copy;2025-2026 by Lauren Howard</h5>
     </footer>
   </body>
 </html>
