--- a/PP6-Sunbud.html
+++ b/PP6-Sunbud.html
@@ -214,14 +214,27 @@
             </li>
           </ul>
 
-          <ul class="portfolio-navigation">
-            <li class="previous-button">
-              <a href="PP5-Stella.html"> <p>↙ Stella</p> </a>
-            </li>
-            <li class="next-button">
-              <a href="PP1-Wag&Wander.html"> </a>
-            </li>
-          </ul>
+<div class="project-nav">
+ <a href="PP5-Stella.html" class="previous-button">
+  <h3>
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 95.27 95.27" class="arrow-icon">
+      <defs>
+        <style>
+          .cls-1 {
+            fill: none;
+            stroke: currentColor;
+            stroke-miterlimit: 10;
+            stroke-width: 6px;
+          }
+        </style>
+      </defs>
+      <line class="cls-1" x1="93.5" y1="1.77" x2="2.5" y2="92.77"/>
+      <polyline class="cls-1" points="2.5 27.77 2.5 92.77 67.5 92.77"/>
+    </svg>
+    Stella
+  </h3>
+</a>
+</div>
         </section>
       </main>
     </div>
