--- a/about.html
+++ b/about.html
@@ -178,14 +178,14 @@
     </div>
 
     <!-- Footer -->
-    <footer class="global-footer">
+     <footer class="global-footer">
       <h3 class="copyright">
         <a href="mailto:hello@laurenhoward.ca">
           Let's Connect! hello@laurenhoward.ca
         </a>
       </h3>
 
-      <h5>&copy;2024-2025 Lauren Howard. All Rights Reserved.</h5>
+      <h5>&copy;2025-2026 by Lauren Howard</h5>
     </footer>
   </body>
 </html>
