--- a/PP5-Stella.html
+++ b/PP5-Stella.html
@@ -98,8 +98,15 @@
             <div class="project-title">
               <h1>Stella</h1>
               <h2>Branding, Album Design, Merchandise</h2>
-              <p>Special thanks to Matthew Johnson for his invaluable mentorship on this project.</p>
-            </div>
+                <p>Student Work</p>
+               
+                <div class="collaborator-caption">
+                  <p>
+     Project Mentor: Matthew Johnson of 123w
+    </p>
+  </div>
+  </div>
+           
             <div class="project-description">
               <p>
                 The fictional artist Stella has a vulnerable, melancholically
@@ -288,14 +295,27 @@
       </main>
     </div>
     <!--footer-->
-      <footer class="global-footer">
-      <h3 class="copyright">
-        <a href="mailto:hello@laurenhoward.ca">
-          Let's Connect! hello@laurenhoward.ca
-        </a>
-      </h3>
+   <footer class="global-footer">
+  <div class="footer-top-row">
+    <!-- Left side -->
+    <div class="footer-info">
+      <h1>Thanks for stopping by!</h1>
+      <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
+    </div>
 
-      <h5>&copy;2025-2026 by Lauren Howard</h5>
-    </footer>
+    <!-- Right side -->
+    <div class="footer-button">
+     <p><a href="#top" class="back-to-top">Back to top</a></p>
+    </div>
+  </div>
+
+  <!-- This is now OUTSIDE footer-top-row -->
+<div class="copyright">
+  <div class="copyright-content">
+    <p>&copy;2025–2026 by Lauren Howard</p>
+    <img src="assets/icon-lauren-howard.svg" alt="Lauren Howard Icon" class="copyright-icon" />
+  </div>
+</div>
+</footer>
   </body>
 </html>
