--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -98,10 +98,11 @@
             <div class="project-title">
                <h1>Thicket Co.</h1>
   <h2>Art Direction, Packaging, Illustration, Editorial</h2>
+
   <div class="collaborator-caption">
+    <p>Student Work</p>
     <p>
-      A big thanks to Chris Rogers and Nathan Aguilar<br />
-      for their collaboration on this project!
+      Project Teammates: Chris Rogers and Nathan Aguilar
     </p>
   </div>
 </div>
@@ -268,14 +269,27 @@ Dial
       </main>
     </div>
     <!--footer-->
-   <footer class="global-footer">
-      <h3 class="copyright">
-        <a href="mailto:hello@laurenhoward.ca">
-          Let's Connect! hello@laurenhoward.ca
-        </a>
-      </h3>
+<footer class="global-footer">
+  <div class="footer-top-row">
+    <!-- Left side -->
+    <div class="footer-info">
+      <h1>Thanks for stopping by!</h1>
+      <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
+    </div>
 
-      <h5>&copy;2025-2026 by Lauren Howard</h5>
-    </footer>
+    <!-- Right side -->
+    <div class="footer-button">
+     <p><a href="#top" class="back-to-top">Back to top</a></p>
+    </div>
+  </div>
+
+  <!-- This is now OUTSIDE footer-top-row -->
+<div class="copyright">
+  <div class="copyright-content">
+    <p>&copy;2025–2026 by Lauren Howard</p>
+    <img src="assets/icon-lauren-howard.svg" alt="Lauren Howard Icon" class="copyright-icon" />
+  </div>
+</div>
+</footer>
   </body>
 </html>
