--- a/about.html
+++ b/about.html
@@ -121,9 +121,7 @@
             </p>
             <br>
             <div class="about-contact-list">
-              <h3> <a href="mailto:hello@laurenhoward.ca">
-                Let's chat! | hello@laurenhoward.ca
-              </a></h3></div>
+              <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
               <br>
 
           <div class="about-content-list">
@@ -178,14 +176,27 @@
     </div>
 
     <!-- Footer -->
-     <footer class="global-footer">
-      <h3 class="copyright">
-        <a href="mailto:hello@laurenhoward.ca">
-          Let's Connect! hello@laurenhoward.ca
-        </a>
-      </h3>
+  <footer class="global-footer">
+  <div class="footer-top-row">
+    <!-- Left side -->
+    <div class="footer-info">
+      <h1>Thanks for stopping by!</h1>
+      <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
+    </div>
 
-      <h5>&copy;2025-2026 by Lauren Howard</h5>
-    </footer>
-  </body>
+    <!-- Right side -->
+    <div class="footer-button">
+     <p><a href="#top" class="back-to-top">Back to top</a></p>
+    </div>
+  </div>
+
+  <!-- This is now OUTSIDE footer-top-row -->
+<div class="copyright">
+  <div class="copyright-content">
+    <p>&copy;2025–2026 by Lauren Howard</p>
+    <img src="assets/icon-lauren-howard.svg" alt="Lauren Howard Icon" class="copyright-icon" />
+  </div>
+</div>
+</footer>
+ </body>
 </html>
