--- a/project-page-1 copy.html
+++ b/project-page-1 copy.html
@@ -243,14 +243,48 @@
       </main>
     </div>
     <!--footer-->
-      <footer class="global-footer">
-      <h3 class="copyright">
-        <a href="mailto:hello@laurenhoward.ca">
-          Let's Connect! hello@laurenhoward.ca
-        </a>
-      </h3>
+   <footer class="global-footer">
+  <div class="footer-top-row">
+    <!-- Left side -->
+    <div class="footer-info">
+      <h1>Thanks for stopping by!</h1>
+      <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
+    </div>
 
-      <h5>&copy;2025-2026 by Lauren Howard</h5>
-    </footer>
+    <!-- Right side -->
+    <div class="footer-button">
+     <p><a href="#top" class="back-to-top">Back to top</a></p>
+    </div>
+  </div>
+
+  <!-- This is now OUTSIDE footer-top-row -->
+<div class="copyright">
+  <div class="copyright-content">
+    <p>&copy;2025–2026 by Lauren Howard</p>
+    <img src="assets/icon-lauren-howard.svg" alt="Lauren Howard Icon" class="copyright-icon" />
+  </div>
+</div>
+</footer>
+  <div class="footer-top-row">
+    <!-- Left side -->
+    <div class="footer-info">
+      <h1>Thanks for stopping by!</h1>
+      <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
+    </div>
+
+    <!-- Right side -->
+    <div class="footer-button">
+     <p><a href="#top" class="back-to-top">Back to top</a></p>
+    </div>
+  </div>
+
+  <!-- This is now OUTSIDE footer-top-row -->
+<div class="copyright">
+  <div class="copyright-content">
+    <p>&copy;2025–2026 by Lauren Howard</p>
+    <img src="assets/icon-lauren-howard.svg" alt="Lauren Howard Icon" class="copyright-icon" />
+  </div>
+</div>
+</footer>
   </body>
 </html>
