changed about page

--- a/illustration.html
+++ b/illustration.html
@@ -48,9 +48,7 @@
             </li>
             <li class="main-menu-item">
               <h3>
-                <a href="illustration.html" class="custom-navigation"
-                  >Illustration</a
-                >
+                <a href="illustration.html" class="custom-navigation active">Illustration</a>
               </h3>
             </li>
             <li class="main-menu-item">
@@ -111,9 +109,9 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Phoebe</h1>
-                  <h4 class="overlay-description">
+                  <h3 class="overlay-description">
                     Featured in the Capilano Courier
-                  </h4>
+                  </h3>
                 </div>
               </figure>
             </li>
@@ -132,9 +130,9 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Joleen Mitton</h1>
-                  <h4 class="overlay-description">
+                  <h3 class="overlay-description">
                     Portrait commission for Creative Mornings Vancouver.
-                  </h4>
+                  </h3>
                 </div>
               </figure>
             </li>
@@ -153,7 +151,7 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Shoes</h1>
-                  <h4 class="overlay-description">Featured in SAPP Zine</h4>
+                  <h3 class="overlay-description">Featured in SAPP Zine</h3>
                 </div>
               </figure>
             </li>
@@ -172,7 +170,7 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Unlucky</h1>
-                  <h4 class="overlay-description">Personal Work</h4>
+                  <h3 class="overlay-description">Personal Work</h3>
                 </div>
               </figure>
             </li>
@@ -191,9 +189,9 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Housing Crisis 1</h1>
-                  <h4 class="overlay-description">
+                  <h3 class="overlay-description">
                     Featured in the Capilano Courier
-                  </h4>
+                  </h3>
                 </div>
               </figure>
             </li>
@@ -212,9 +210,9 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Housing Crisis 2</h1>
-                  <h4 class="overlay-description">
+                  <h3 class="overlay-description">
                     Featured in the Capilano Courier
-                  </h4>
+                  </h3>
                 </div>
               </figure>
             </li>
@@ -233,7 +231,7 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Untitled</h1>
-                  <h4 class="overlay-description">Featured in the Liar</h4>
+                  <h3 class="overlay-description">Featured in the Liar</h3>
                 </div>
               </figure>
             </li>
@@ -252,9 +250,9 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Untitled</h1>
-                  <h4 class="overlay-description">
+                  <h3 class="overlay-description">
                     Cover for the Capilano Courier
-                  </h4>
+                  </h3>
                 </div>
               </figure>
             </li>
@@ -286,26 +284,5 @@
   </div>
 </div>
 </footer>
-  <div class="footer-top-row">
-    <!-- Left side -->
-    <div class="footer-info">
-      <h1>Thanks for stopping by!</h1>
-      <h3>Wanna get in touch? | <a href="mailto:hello@laurenhoward.ca">hello@laurenhoward.ca</a></h3>
-    </div>
-
-    <!-- Right side -->
-    <div class="footer-button">
-     <p><a href="#top" class="back-to-top">Back to top</a></p>
-    </div>
-  </div>
-
-  <!-- This is now OUTSIDE footer-top-row -->
-<div class="copyright">
-  <div class="copyright-content">
-    <p>&copy;2025–2026 by Lauren Howard</p>
-    <img src="assets/icon-lauren-howard.svg" alt="Lauren Howard Icon" class="copyright-icon" />
-  </div>
-</div>
-</footer>
-  </body>
+</body>
 </html>
