--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <ul class="main-menu">
             <li class="main-menu-item">
               <h3>
-                <a href="index.html" class="custom-navigation">Design</a>
+                <a href="index.html" class="custom-navigation active">Design</a>
               </h3>
             </li>
             <li class="main-menu-item">
@@ -233,6 +233,7 @@
         </section>
       </main>
     </div>
+    
     <!--footer-->
 <footer class="global-footer">
   <div class="footer-top-row">
