tweaked about page

--- a/about.html
+++ b/about.html
@@ -105,9 +105,9 @@
     </div>
 
     <div class="about-bio">
-       <h1>Nice to meet you! </h1>
+       <h1>Nice to meet you! I'm Lauren :)</h1>
       <p>
-      I’m Lauren, a multidisciplinary designer and illustrator based in Vancouver BC. Currently focused on branding, packaging and editorial design, and invariably drawn to intricate illustration, playful hand-lettering, and tender storytelling.
+      I'm a multidisciplinary designer and illustrator based in Vancouver BC. Currently focused on branding, packaging and editorial design, and invariably drawn to intricate illustration, playful hand-lettering, and tender storytelling.
       <p>Outside the artboard, you can find me down a sketchbook rabbit hole, crossing movies off my watchlist, or convincing myself that a concert is worth the price (it absolutely is).
       </p>
 
